(lang dune 3.0)
(using menhir 2.1)
(name combc)
(version 0.2.7)
(license "GPL-3.0")
(authors "Owen Simon <osimon922@gmail.com>")
(maintainers "Owen Simon <osimon922@gmail.com>")
(source (github "osimon8/CombinatorC"))
(generate_opam_files true)
(package 
 (name combc)
 (synopsis "C-style language that compiles to Factorio combinators")
 (depends "menhir" ("core_kernel" (= "v0.14.2"))  "ocamlgraph" "yojson" "zlib" "base64" "memcpy")
)