(library
 (name parse)
 (libraries core_kernel ast compiler menhirLib))

(ocamllex lexer)

(menhir
 (modules parser)
 ; (flags --explain --table)
 (flags --explain -lg 1 -la 1 -lc 2)
)

(menhir
  (modules unitActionsParser)
  (flags --table --external-tokens Parser)
)

(rule
  (action
    (with-stdout-to unitActionsParser.mly
      (run menhir
        %{dep:parser.mly}
        --only-preprocess-u
))))

(rule
 (with-stdout-to
  parser.messages.new
  (run
   menhir
   %{dep:parser.mly}
   --base
   parser
   --list-errors)))

(rule
 (with-stdout-to
  parser_errors.ml
  (run
   menhir
   %{dep:parser.mly}
   --base
   parser
   --compile-errors
   %{dep:parser.messages})))

(rule
 (with-stdout-to
  parser.messages.updated
  (run
   menhir
   %{dep:parser.mly}
   --base
   parser
   --update-errors
   %{dep:parser.messages})))

(rule
 (alias update-parser-messages)
 (action
  (diff parser.messages parser.messages.updated)))

(rule
 (alias generate-parser-messages)
 (action
  (diff parser.messages parser.messages.new)))